--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -26,7 +26,10 @@ button:focus {
 }
 
 img {
-    width: 100px;
+    max-width:50px;
+    max-height:50px;
+    width: auto;
+    height: auto;
 }
 
 div>p:first-child {
