--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -19,6 +19,11 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border: solid;
+    border-bottom-width: 2px;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-left-width: 0;
 }
 
 button:focus {
