--- a/quinzena3/bugfixes/exercicio-bugfixes/index.css
+++ b/quinzena3/bugfixes/exercicio-bugfixes/index.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 h2 {
@@ -14,12 +15,13 @@ h2 {
     padding: 10px 5px 10px 5px;
     color: white;
     text-align: center;
+
 }
 
 input {
     height: 20px;
     width: 500px;
-    border: solid;
+    border: solid;  
     border-bottom-width: 2px;
     border-top-width: 0;
     border-right-width: 0;
@@ -143,3 +145,4 @@ td button {
 #comprar-button:hover {
     background-color:#f19c46
 }
+
